sidetree-mock/kustomize/sidetree-mock/overlays/local/sidetree-mock/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sidetree-mock
spec:
  tls:
  - hosts:
      - $(SIDETREE_MOCK_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(SIDETREE_MOCK_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sidetree-mock
            port:
              name: http
